Use attribute to add json converter

--- a/Polyadic.Json/Polyadic.Json.csproj
+++ b/Polyadic.Json/Polyadic.Json.csproj
@@ -4,4 +4,7 @@
         <RootNamespace>Polyadic.Json</RootNamespace>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="Polyadic.Json.Test" />
+    </ItemGroup>
 </Project>
